# MLops-Project

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  Week_1 (1).ipynb  Week_1_ML_pipeline_example.ipynb  docker-compose.yml
CX Curn Project/: .env.example  Makefile  README.md  docker-compose.prod.yml  pyproject.toml  requirements.txt
CX Curn Project/app/: model_loader.py  monitoring.py  schemas.py
CX Curn Project/deploy/: setup_droplet.sh
CX Curn Project/deploy/nginx/: churn-api.conf
CX Curn Project/docs/: github_secrets.md  retraining_and_rollback.md  verification_checklist.md
CX Curn Project/monitoring/: prometheus.yml
CX Curn Project/monitoring/grafana/provisioning/dashboards/: churn_dashboard.json  dashboard.yml
CX Curn Project/monitoring/grafana/provisioning/datasources/: datasource.yml
CX Curn Project/notebooks/: 01_exploratory_data_analysis.ipynb
CX Curn Project/scripts/: smoke_test.sh
CX Curn Project/src/data/: load_data.py
CX Curn Project/src/features/: preprocessing.py
CX Curn Project/src/models/: load_from_registry.py  metrics.py  plots.py  registry.py  rollback.py
CX Curn Project/src/monitoring/: drift.py  simulate.py
CX Curn Project/src/training/: retrain.py  train.py
CX Curn Project/tests/: conftest.py  test_api.py  test_model_loader.py  test_preprocessing.py
Enterprise RAGOps Platform Production-Ready AI Knowledge Assistant/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
app/: main.py
docs/: digitalocean_deploy.md  (+1 more)
(+41 files in other folders)
