[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-churn-prediction"
version = "0.1.0"
description = "End-to-End MLOps Pipeline for Customer Churn Prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Abhishek" }]

[tool.setuptools]
packages = ["src"]

# --- pytest config (used from Phase 4) ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
# MLflow's own code triggers these; they're not from our code.
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
